--- a/templates/template_manifest.json
+++ b/templates/template_manifest.json
@@ -2,7 +2,7 @@
     "files": [
       "ios/Runner.xcodeproj/project.pbxproj",
       "ios/Runner/ios_templateApp.swift",
-      "ios/Runner/ContentView.swift",
+      "ios/Runner/Klutter.swift",
 
       "pubspec.yaml.templ",
       "README.md.templ"
