Compilation for a single variable in a dart file

--- a/templates/template_manifest.json
+++ b/templates/template_manifest.json
@@ -4,6 +4,8 @@
       "ios/Runner/ios_templateApp.swift",
       "ios/Runner/Klutter.swift",
 
+      "lib/main.dart.templ",
+
       "pubspec.yaml.templ",
       "README.md.templ"
     ]
